test/sematest/invalid/InvalidMethodCalls3.java

class InvalidMethodCalls {

	
	public static void main(String[] args) {
		
		InvalidMethodCalls calls=new InvalidMethodCalls();
		calls.threeints(12, false);
	}
	
	public void threeints(int a, int b, int c)
	{
		
	}
}
